--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,15 +4,15 @@
   "remoteUser": "robot",
   "build": {"dockerfile":"Dockerfile"},
   "features": {
-    "ghcr.io/devcontainers/features/common-utils:1": {
+    "ghcr.io/devcontainers/features/common-utils": {
       "version": "latest",
       "configureZshAsDefaultShell": false,
       "username": "robot",
     },
-    "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
+    "ghcr.io/rocker-org/devcontainer-features/apt-packages": {
       "packages":  "stow,tmux,ripgrep,fd-find,git-gui,python3-argcomplete,python-is-python3"
     },
-    "ghcr.io/devcontainers/features/node:1": {}  // for stuff like copilot, lsp
+    "ghcr.io/devcontainers/features/node": {}  // for stuff like copilot, lsp
   },
   "containerEnv": {
     "ROS_LOCALHOST_ONLY": "1",
@@ -48,19 +48,25 @@
     }
   ],
   "postCreateCommand": {
+    "fix-ownership": "sudo chown -R robot:robot /home/robot/colcon_ws",
     "video-group": "sudo usermod -aG video robot",
     "node-install": ". ${NVM_DIR}/nvm.sh && nvm install --lts",
     "update": "sudo apt update && sudo apt dist-upgrade -y && rosdep update",
     "install-mixins": "colcon mixin add default https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml && colcon mixin update default",
     "source-ros": "echo 'source /opt/ros/jazzy/setup.bash' >> /home/robot/.bashrc",
-  },
+    },
   "customizations": {
     "vscode": {
       "extensions": [
         "ms-python.python",
         "Ranch-Hand-Robotics.rde-ros-2",
         "mechatroner.rainbow-csv"
-      ]
+      ],
+      "settings": {
+        "python.analysis.extraPaths": [
+          "/opt/ros/jazzy/lib/python3.12/site-packages",
+        ]
+      }
     }
   }
 }
